Styling nav menu and amending links to wrap text correctly

--- a/static/base.css
+++ b/static/base.css
@@ -4,6 +4,26 @@ html, body {
     padding: 0;
 }
 
+header {
+    padding: 1em;
+}
+
+nav ul {
+    padding: 0;
+    list-style-type: none;
+    line-height: 2em;
+}
+
+nav ul li a {
+    display: block;
+    text-decoration: none;
+    padding-left: 1em;
+}
+
+nav ul li a:hover {
+    background-color: rgb(200, 200, 200);
+}
+
 footer {
     padding: 1em;
 }
